app/assets/stylesheets/application.scss
/* ... */
#chapter-nav{
  max-height: 400px;
  max-height: clamp(0px, calc(100dvh - 200px), 400px);
  overflow-y: auto;
}
.side-nav-col { pointer-events: none;}
.side-nav-col nav { pointer-events: auto;}
@media screen and (max-width: 767px) {
  .popup-top { position:static; }
  .by-popup-v02 { position: static; }
  .modal-dialog {height: 100%;}
  .modal-content {height: 100%;}
  #chapter-nav{
    max-height: 300px;
    max-height: clamp(0px, calc(100dvh - 200px), 300px);
  }
  #static_page img {
    width: 100%;
    object-fit: cover;
  }

}
@media screen and (max-width: 991px) {
  #moreMobile .dropdown-menu{ transform: translate3d(5px, 42px, 0px) !important;}
  #moreMobile-author .dropdown-menu{ transform: translate3d(5px, 72px, 0px) !important;}
  .error-found-text { display: none; }
}
@media screen and (max-width: 399px) {
  #moreMobile .dropdown-menu{ transform: translate3d(5px, 28px, 0px) !important;}
  #moreMobile-author .dropdown-menu{ transform: translate3d(5px, 28px, 0px) !important;}
  #static_page img {
    width: 100%;
    object-fit: cover;
  }
}
/* .top-search-v02 input { width: auto;}*/
.ch_anch { height: 2px;}
.tooltip{ pointer-events:none; }
.by-dropdown-header-v02 { cursor: default;}
.search_results { font-size: 13pt; line-height: 1.2rem; }
.search_results li { margin-top: 0.8rem;}
.progress-outside .progress-inside{
  width:0%;
}
.progress-outside{
	width: calc(100% - 35px);
}

.backend input {
  border: solid 1px;
  width: unset;
}

.striped {
  background-image: linear-gradient(135deg, #dbb59b 25%, #5F5370 25%, #5F5370 50%, #dbb59b 50%, #dbb59b 75%, #5F5370 75%, #5F5370 100%);
  background-size: 56.57px 56.57px;
}
/* temporary fix for dropping below the carousel in Chrome
.carousel-arrow-left-v02{
  width: unset;
}
*/

.backend #genre{
  min-height: unset;
  height: unset;
}

/* stuff for jQuery sortable */
body.dragging, body.dragging * {
  cursor: move !important;
}
.dragged {
  position: absolute;
  left: 0px;
  opacity: 0.5;
  z-index: 2000;
}
/*
ol#anth_texts li.placeholder {
  position: relative;
  margin: 0;
  padding: 0;
  border: none;
}
ol#anth_texts li.placeholder:before {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  margin-top: -5px;
  left: -5px;
  top: -4px;
  border: 5px solid transparent;
  border-right-color: red;
  border-left: none;
}*/
.nav-link.active{
	color: #ffffff;
	background-color: #660248;
}
.nav-link{
  align-items: normal;
}
/*.custom-select{
  display:none;
}*/
/** .slider-handle {
  background-color: #907989;
  background-image: unset;
} */
/* .slider-selection {
	background: #907989;
}*/

.languages-filters{
	padding-right: 24px;
}
/* remove all default styling of buttons */
button.plainbutton {
  display: inline-block;
  border: none;
  text-decoration: none;
  cursor: pointer;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
}

button.chapterbutton {
  font-family: 'ben-yehuda';
  width: 100%;
  background-color: inherit;
}
input[type="search"]::-webkit-search-cancel-button {
  margin-left: 30px;
}

.bookmark::before{
content: unset;
}
.bookmark_marker{
	font-family: ben-yehuda;
	font-size: 18px; 
	line-height: 18px;
	float: left;
	position: relative;
  left: -26px;
  cursor: pointer;
}

.admin_container{
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
}
.admin_dashboard_item{
  padding: 10px;
  background-color: #eeeced;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  margin: 10px;
}

body.modal-open{
  padding-right: 0 !important;
  overflow-y:scroll;
}

.modal{
  padding-right: 0 !important;
}
.error, .notice, .success, .alert {padding:.8em;margin-bottom:1em;border:2px solid #ddd;}
.error, .alert {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
.notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
.success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
.error, .alert a {color:#8a1f11;}
.notice a {color:#514721;}
.success a {color:#264409;}

.flex-row {
  display: flex;
  /* flex: 1 0 100%; */
}
.flex-col{
  display: flex;
  flex-wrap: nowrap;
  flex-grow: 1;
  flex-basis: 0;
}
.flex-break {
  flex-basis: 100%;
}
.ui-menu.ui-autocomplete.ui-front {
  z-index: 1100;
}

.ui-state-default{
	color: #fff;
	background-color: #660248;
}
.ui-state-active{
	color: #fff;
	background-color: #660248 !important;
}
.tag-suggestion-heuristic {
  font-size: 0.8rem;
  color: #999;
}

.scrolling-200-list {
  overflow-y: scroll;
  max-height: 200px; 
}

.indented {
  margin-right: 15px !important;
}

.tags a {
  color: #fff;
}
.tags.pending a {
	color: #660248;
}
.pad10rl {
  padding: 0 5px 0 5px;
}

.by-button-v02 a:hover {
  color: #ffffff;
}
.flash-backend {
  position: fixed;
  z-index: 9000;
}
.additional_actions_container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.tagging-review {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.horizontal-buttonset {
  display: flex;
  flex-direction: row;
  justify-content: normal;
  gap: 10px;
  margin-bottom: 10px;
}

#pending-tag {
  min-width: 350px;
}
td.label-name{
	white-space: unset;
  min-width: 200px;
}
.tagging-management-area {
  width: unset;
}

small p{
  font-size: 80% !important;
}

@font-face {
  font-family: "ben-yehuda";
  src:font-url("ben-yehuda2.eot");
  src:font-url("ben-yehuda2.eot?#iefix") format("embedded-opentype"),
    font-url("ben-yehuda2.woff") format("woff"),
    font-url("ben-yehuda2.ttf") format("truetype"),
    font-url("ben-yehuda2.svg#ben-yehuda") format("svg");
  font-weight: normal;
  font-style: normal;

}

[data-icon]:before {
  font-family: "ben-yehuda" !important;
  content: attr(data-icon);
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
/* ... */

